Fix overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
   overflow-x: hidden;
 }
